--- a/skw/package.json
+++ b/skw/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "@actions-skw/skw",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Kesin11/actions-skw/skw",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,14 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/Kesin11/actions-skw.git"
   },
   "keywords": [
-    "actions",
-    "node",
-    "setup"
+    "actions"
   ],
-  "author": "",
+  "author": "kesin1202000@gmail.com",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0"
