Change tsconfig.json to monorepo style

--- a/skw/package.json
+++ b/skw/package.json
@@ -5,7 +5,7 @@
   "description": "Kesin11/actions-skw/skw",
   "main": "lib/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
