--- a/skw/package.json
+++ b/skw/package.json
@@ -23,7 +23,8 @@
   "author": "kesin1202000@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "@actions/tool-cache": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.5",
