--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-      - run: npm ci
+      - name: npm setup
+        run: |
+          npm --version
+          npm ci
+        working-directory: skw
       - run: npm run all
+        working-directory: skw
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
